# AIvoice

./: .gitignore  CMakeLists.txt  readme.md  test.txt
src/: ai_manager.cpp  main.cpp  server.cpp
src/include/: ai_manager.hpp  server.hpp
